<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Michis Reader</string>
    <string name="action_back">Regresar</string>
    <string name="action_apply">Aplicar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_save">Guardar</string>
    <string name="action_select_all">Seleccionar todos</string>
    <string name="library_title">Mi biblioteca</string>
    <string name="settings_title">Configuración</string>
    <string name="quotes_title">Citas</string>
    <string name="bookmarks_title">Marcadores</string>
    <string name="dictionaries_title">Diccionarios</string>
    <string name="reset_books_title">Reiniciar libros</string>
    <string name="google_web_client_id">33987563321-0dbosimmoopurmg093nbi3tdbk80mgru.apps.googleusercontent.com</string>
    <string name="spen_actions">Controles del lector</string>
    <string name="spen_click">Página siguiente</string>
    <string name="spen_double_click">Página anterior</string>
    <string name="spen_swipe_left">Agregar marcador</string>
    <string name="spen_swipe_right">Cambiar tema</string>
    <string name="spen_swipe_up">Aumentar texto</string>
    <string name="spen_swipe_down">Reducir texto</string>
    <string name="spen_circle_clockwise">Agregar al diccionario</string>
    <string name="spen_circle_counterclockwise">Agregar cita</string>
</resources>
